# semantic-plagiarism-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/sample_corpus/suspicious/: suspicious-document01265.xml  suspicious-document01503.xml  suspicious-document01589.xml  suspicious-document02226.xml  suspicious-document02541.xml  suspicious-document02577.xml  suspicious-document02623.xml  suspicious-document02839.xml  suspicious-document03194.xml  suspicious-document03540.xml  suspicious-document03651.xml  suspicious-document04138.xml  suspicious-document04495.xml  suspicious-document04763.xml  suspicious-document05392.xml  suspicious-document05578.xml  suspicious-document05934.xml  suspicious-document05939.xml  suspicious-document06394.xml  suspicious-document07101.xml  suspicious-document07478.xml  suspicious-document07694.xml  suspicious-document08005.xml  suspicious-document08962.xml  suspicious-document09199.xml  suspicious-document09772.xml  suspicious-document10599.xml  suspicious-document10664.xml  suspicious-document10935.xml
docs/: project_spec.tex
src/plagiarism_engine/: PipelineCLI.py  cli.py  dataset.py  evaluation.py  lsh.py  minhash.py  pipeline.py  preprocessing.py  retrieval.py  simhash.py
tests/: test_engine.py
